# bubblescript

./: .gitignore  CMakeLists.txt  README.md
docs/: FILE_STRUCTURE.md  PLANS.md  settings.json
examples/: arithmetic.bubble  example.bubble  hello.bubble  variables.bubble
src/: main.cpp
src/interpreter/: interpreter.cpp  interpreter.h  variables.cpp
